--- a/sample_config.env
+++ b/sample_config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "2056542982:AAEU88aWsMlhf2XeopsI3CjPoLGwGujz74w"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 2596973
+API_HASH = "c5aec0c724b02f0cc49a6be60e75c20e"
+OWNER_ID = 1080877875
+AUTH_CHANNEL = "-1001597574525" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
